WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162250
REGRESSION (
r204552
): Athlete search on Strava gives bad rendering.
https://bugs.webkit.org/show_bug.cgi?id=162250
Summary
REGRESSION (r204552): Athlete search on Strava gives bad rendering.
alan
Reported
2016-09-19 20:13:24 PDT
1. Log into Strava 2. Be on your feed page:
https://www.strava.com/dashboard
3. Click the magnifying glass 4. Start typing
Attachments
Patch
(7.26 KB, patch)
2016-09-19 20:56 PDT
,
alan
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-yosemite
(1.03 MB, application/zip)
2016-09-19 21:51 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews104 for mac-yosemite-wk2
(986.58 KB, application/zip)
2016-09-19 21:56 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews113 for mac-yosemite
(1.55 MB, application/zip)
2016-09-19 22:00 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews124 for ios-simulator-elcapitan-wk2
(7.41 MB, application/zip)
2016-09-19 22:07 PDT
,
Build Bot
no flags
Details
Patch
(7.29 KB, patch)
2016-09-20 09:00 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.79 KB, patch)
2016-09-20 14:50 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.75 KB, patch)
2016-09-20 15:32 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-09-19 20:16:44 PDT
rdar://problem/28156433
alan
Comment 2
2016-09-19 20:56:42 PDT
Created
attachment 289308
[details]
Patch
Build Bot
Comment 3
2016-09-19 21:51:05 PDT
Comment on
attachment 289308
[details]
Patch
Attachment 289308
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2109844
New failing tests: compositing/layer-creation/overlap-transformed-layer.html compositing/layer-creation/overlap-child-layer.html compositing/layer-creation/fixed-position-under-transform.html imported/blink/css3/filters/effect-drop-shadow-clip-abspos.html imported/blink/compositing/child-transform-layer-rounding.html
Build Bot
Comment 4
2016-09-19 21:51:09 PDT
Created
attachment 289311
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-09-19 21:56:30 PDT
Comment on
attachment 289308
[details]
Patch
Attachment 289308
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2109877
New failing tests: compositing/layer-creation/overlap-transformed-layer.html compositing/layer-creation/overlap-child-layer.html compositing/layer-creation/fixed-position-under-transform.html imported/blink/css3/filters/effect-drop-shadow-clip-abspos.html imported/blink/compositing/child-transform-layer-rounding.html
Build Bot
Comment 6
2016-09-19 21:56:33 PDT
Created
attachment 289312
[details]
Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-09-19 22:00:09 PDT
Comment on
attachment 289308
[details]
Patch
Attachment 289308
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2109871
New failing tests: compositing/layer-creation/overlap-transformed-layer.html compositing/layer-creation/overlap-child-layer.html compositing/layer-creation/fixed-position-under-transform.html imported/blink/css3/filters/effect-drop-shadow-clip-abspos.html imported/blink/compositing/child-transform-layer-rounding.html
Build Bot
Comment 8
2016-09-19 22:00:12 PDT
Created
attachment 289314
[details]
Archive of layout-test-results from ews113 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-09-19 22:07:00 PDT
Comment on
attachment 289308
[details]
Patch
Attachment 289308
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2109879
New failing tests: compositing/layer-creation/overlap-transformed-layer.html compositing/layer-creation/overlap-child-layer.html compositing/layer-creation/fixed-position-under-transform.html imported/blink/css3/filters/effect-drop-shadow-clip-abspos.html imported/blink/compositing/child-transform-layer-rounding.html
Build Bot
Comment 10
2016-09-19 22:07:04 PDT
Created
attachment 289317
[details]
Archive of layout-test-results from ews124 for ios-simulator-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-elcapitan-wk2 Platform: Mac OS X 10.11.6
alan
Comment 11
2016-09-20 09:00:11 PDT
Created
attachment 289354
[details]
Patch
alan
Comment 12
2016-09-20 14:50:35 PDT
Created
attachment 289400
[details]
Patch
Simon Fraser (smfr)
Comment 13
2016-09-20 15:08:27 PDT
Comment on
attachment 289400
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=289400&action=review
> Source/WebCore/platform/graphics/LayoutRect.h:134 > + float maxX = location.x() + size.width(); > + float maxY = location.y() + size.height();
Use FloatRect::maxX()/maxY().
> Source/WebCore/platform/graphics/LayoutRect.h:150 > + void checkedUnite(const LayoutRect&);
I think this should return a bool saying if it bailed.
alan
Comment 14
2016-09-20 15:32:55 PDT
Created
attachment 289405
[details]
Patch
WebKit Commit Bot
Comment 15
2016-09-20 17:27:21 PDT
Comment on
attachment 289405
[details]
Patch Clearing flags on attachment: 289405 Committed
r206188
: <
http://trac.webkit.org/changeset/206188
>
WebKit Commit Bot
Comment 16
2016-09-20 17:27:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug